2006-02-11  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* tools/gnu/classpath/tools/giop/grmic/GiopRmicCompiler.java
	* tools/gnu/classpath/tools/giop/grmic/MethodGenerator.java
	* tools/gnu/classpath/tools/giop/grmic/templates/Tie.jav,
	tools/gnu/classpath/tools/giop/grmic/templates/TieMethod.jav,
	tools/gnu/classpath/tools/giop/grmic/templates/TieMethodVoid.jav:
	Rewritten.
	* tools/gnu/classpath/tools/giop/grmic/HashFinder.java: New file.

2006-02-11  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/java/security/jce/sig/EncodedKeyFactory.java
	(engineGeneratePublic): Added support for raw key-specifications.
	(engineGeneratePrivate): Likewise.
	(decodeDSSPublicKey): New method.
	(decodeRSAPublicKey): Likewise.
	(decodeDSSPrivateKey): Likewise.
	(decodeRSAPrivateKey): Likewise.
	* gnu/java/security/key/rsa/RSAKeyPairX509Codec.java
	(encodePrivateKey): Throw InvalidParameterException.
	(decodePublicKey): Likewise.
	(decodePrivateKey): Likewise.
	* gnu/java/security/key/rsa/RSAKeyPairPKCS8Codec.java
	(encodePublicKey): Likewise.
	(encodePrivateKey): Likewise.
	(decodePublicKey): Likewise.
	* gnu/java/security/key/dss/DSSKeyPairX509Codec.java
	(encodePrivateKey): Likewise.
	(decodePublicKey): Likewise.
	(decodePrivateKey): Likewise.
	* gnu/java/security/key/dss/DSSKeyPairPKCS8Codec.java
	(encodePublicKey): Likewise.
	(encodePrivateKey): Likewise.
	(decodePublicKey): Likewise.

2006-02-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/StyleContext.java
	(registerStaticAttributeKey): New static method.

2006-02-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/DefaultStyledDocument.java
	(ElementBuffer.clone): New method.

2006-02-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/ParagraphView.java
	(findOffsetToCharactersInString): New method.
	(getClosestPositionTo): New method.
	(getPartialSize): New method.
	(getTabBase): New method.
	(adjustRow): New method.
	(breakView): New method.
	(getBreakWeight): New method.
