@@ -1,3 +1,14 @@
+2006-02-11  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/java/awt/peer/gtk/GtkComponentPeer.java (repaintTimer):
+	Removed field.
+	(repaint): Immediately post to queue when tm <= 0, otherwise call
+	RepaintTimerTask.schedule().
+	(RepaintTimerTask): Make static.
+	(RepaintTimerTask.repaintTimer): New static final field.
+	(RepaintTimerTask.awtComponent): New field.
+	(schedule): New static method.
+
 2006-02-11  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
 
 	* tools/gnu/classpath/tools/giop/grmic/GiopRmicCompiler.java
